# DocMind

./: .editorconfig  .gitignore  README.md  需求分析文档.md
apps/api/: README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: analyses.py  chats.py  papers.py  tasks.py
apps/api/app/core/: bootstrap.py  config.py  db.py
apps/api/app/models/: analysis.py  chat.py  paper.py  task.py
apps/api/app/repositories/: analysis_repository.py  chat_repository.py  memory_store.py  paper_repository.py  task_repository.py  util.py
apps/api/app/schemas/: analysis.py  chat.py  paper.py  task.py
apps/api/app/services/: analysis_service.py  chat_service.py  paper_service.py  task_service.py
apps/api/tests/: test_health.py
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  styles.css
docs/: 今日更新日志-2026-03-11.md  今日更新日志-2026-03-12.md  今日更新日志-2026-03-13.md  前后端字段对齐清单.md  前端页面设计方案.md  后端收敛方案.md  后端表结构与API草案.md  项目骨架搭建说明.md
